--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -42,6 +42,24 @@
 	margin-bottom: -4px;
 }
 
+.hitMarker {
+	background-image: url("./../images/hitMarker.png");
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	padding: 0;
+	margin: 0;
+}
+
+.missMarker {
+	background-image: url("./../images/missMarker.png");
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	padding: 0;
+	margin: 0;
+}
+
 #gridLayerPlayer{
 	position: absolute;
 }
@@ -84,6 +102,9 @@
 	margin-bottom: -10px;
 }
 
+#playerlabels{
+	margin-left: 5px;
+}
 
 
 
