--- a/project/templates/index2.html
+++ b/project/templates/index2.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Space Bomber</title>
-	<link rel="stylesheet" href="../static/css/style.css">
+	<title>Test Socket IO</title>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
   	<!-- <script src="{{ url_for('static', filename='app.js') }}"></script> -->
@@ -12,7 +11,7 @@
 <body>
 <div id="app" class="border"></div>
 
-<script src="bundle.js"></script>
+<script src="main2.js"></script>
 </body>
 </html>
 
