--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -32,7 +32,7 @@
 }
 
 .gridTile {
-	background-image: url("./../images/singleTile.png");
+	/*background-image: url("./../images/singleTile.png");*/
 	width: 50px;
 	height: 50px;
 	position: relative;
@@ -43,7 +43,7 @@
 }
 
 .hitMarker {
-	background-image: url("./../images/hitMarker.png");
+	/*background-image: url("./../images/hitMarker.png");*/
 	width: 50px;
 	height: 50px;
 	position: absolute;
@@ -52,7 +52,7 @@
 }
 
 .missMarker {
-	background-image: url("./../images/missMarker.png");
+	/*background-image: url("./../images/missMarker.png");*/
 	width: 50px;
 	height: 50px;
 	position: absolute;
