--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" href="../static/css/style.css">
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
-  	<!-- <script src="{{ url_for('static', filename='app.js') }}"></script> -->
 	
 </head>
 <body>
 <div id="app" class="border"></div>
 
-<script src="bundle.js"></script>
+<script src="{{url_for('static', filename='./js/bundle.js')}}"></script>
+
 </body>
 </html>
 
