Changed the starting process of the game.
Now the first player to enter name will has to send the resulting link to the other player. The other player opens that link and enters their name and then be entered into the game.

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<form id="searchForm" action="{{url_for('game')}}" method="GET">
+<form id="searchForm" action="/game/{{game_id}}" method="POST">
 	<div>
 		<input type="text" name="username" placeholder="Enter Username">
 	</div>
