--- a/project/templates/game.html
+++ b/project/templates/game.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="../static/css/style.css">
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+	<script src="../static/js/js.cookie.js"></script>
 	
 </head>
 <body>
@@ -13,7 +14,8 @@
 
 <script>
 	var p_name="{{p_name}}";
-	var ready="{{ready}}"
+	var ready="{{ready}}";
+	var game_id="{{game_id}}";
 </script>
 <script src="{{url_for('static', filename='./js/bundle.js')}}"></script>
 
