--- a/project/templates/game.html
+++ b/project/templates/game.html
@@ -9,9 +9,12 @@
 	<script src="../static/js/js.cookie.js"></script>
 	
 </head>
-<body>
-<div id="app" class="border"></div>
-
+<body class="black-bg zero-margin">
+<div id="app_container">
+	<div id="app_container_middle">
+		<div id="app" class="border"></div>
+	</div>
+</div>
 <script>
 	var p_name="{{p_name}}";
 	var ready="{{ready}}";
