--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -9,7 +9,7 @@
 	<script src="../static/js/js.cookie.js"></script>
 	
 </head>
-<body>
+<body class="black-bg">
 
 <form id="searchForm" action="/game/{{game_id}}" method="POST">
 	<div>
