--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,20 +3,32 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Space Bomber</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="../static/css/style.css">
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="../static/js/js.cookie.js"></script>
 	
 </head>
-<body class="black-bg">
-
-<form id="searchForm" action="/game/{{game_id}}" method="POST">
-	<div>
-		<input type="text" name="username" placeholder="Enter Username">
+<body class="black-bg zero-margin">
+<div class="titleArea2">
+	<div id="titleArea" >
+		<img class="title-image" src="../static/images/space_background.jpg" alt="">
 	</div>
-	<button type="submit" id="submitBtn">Submit</button>
-</form>
+	<div class="title center">
+		<img src="../static/images/space_bomber_title.png" alt="">
+	</div>
+</div>
+
+<div id="indexMain" class="container-fluid">
+	<form id="searchForm" class="navbar-form navbar-left" action="/game/{{game_id}}" method="POST">
+		<div class="form-group">
+			<input type="text" name="username" class="form-control form-bottom-margin" placeholder="Enter Username">
+		</div>
+		<button type="submit" id="submitBtn" class="btn btn-default">Start Game</button>
+	</form>
+</div>
 </body>
 </html>
-
