--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -12,6 +12,15 @@
 	padding: 0px;
 }
 
+.main-font {
+	font-family: Arial, sans-serif;
+}
+
+.main-color {
+	color: #4cc7d1;
+}
+
+
 /* index.html page specific --------------------------*/
 #titleArea{
 	position: absolute;
@@ -40,6 +49,7 @@
 }
 
 
+
 /* index.html page specific --------------------------*/
 
 #app_container{
@@ -47,11 +57,13 @@
 	width: 100%;
 	height: 100%;
 	display: table;
+	z-index: 100;
 }
 
 #app_container_middle{
 	display: table-cell;
     vertical-align: middle;
+
 }
 
 #app {
@@ -63,11 +75,15 @@
 	margin-left: auto;
 }
 
+
+
+
+/* game.html page specific --------------------------*/
+
 #playerPanel {
 	width: 1000px;
 	height: 400px;
 	position: absolute;
-	/*border: 1px solid white;*/
 	box-sizing: border-box;
 	border-top: 1px solid #45d6e0;
 	top: 400px;
@@ -78,14 +94,12 @@
 	width: 1000px;
 	height: 400px;
 	position: absolute;
-	/*border: 1px solid white;*/
-	box-sizing: border-box;
+	top:-1px;
 	border-bottom: 1px solid #45d6e0;
 	color: white;
 }
 
 .gridTile {
-	/*background-image: url("./../images/singleTile.png");*/
 	width: 50px;
 	height: 50px;
 	position: relative;
@@ -93,11 +107,9 @@
 	vertical-align: top;
 	padding: 0;
 	margin: 0;
-	/*margin-bottom: -4px;*/
 }
 
 .hitMarker {
-	/*background-image: url("./../images/hitMarker.png");*/
 	width: 50px;
 	height: 50px;
 	position: absolute;
@@ -106,7 +118,6 @@
 }
 
 .missMarker {
-	/*background-image: url("./../images/missMarker.png");*/
 	width: 50px;
 	height: 50px;
 	position: absolute;
@@ -125,7 +136,6 @@
 }
 
 .ship1 {
-	/*background-image: url("./../images/ship1.png");*/
 	width: 50px;
 	height: 150px;
 	position: absolute;
@@ -153,10 +163,13 @@
 }
 
 #title{
-	margin-bottom: -10px;
+	font-family: Arial, sans-serif;
+	color: #4cc7d1;
+	margin-bottom: 10px;
 }
 
 #playerlabels{
+	margin-top: 40px;
 	margin-left: 5px;
 }
 
@@ -198,22 +211,4 @@
 }
 
 
-
-
-/* this gets rid of a faint line that bootstrap causes*/
-/*.navbar{
-	border: 0;
-}
-.navbar-form, .navbar-left {
-	-webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    -o-box-shadow: none;
-    box-shadow: none;
-}
-.navbar-default { 
-	outline: none; 
-	border:none !important; 
-	box-shadow:none !important; 
-}
-*/
 
