--- a/project/templates/game.html
+++ b/project/templates/game.html
@@ -11,6 +11,9 @@
 	
 </head>
 <body class="black-bg zero-margin">
+<div id="titleArea" >
+	<img class="title-image" src="../static/images/space_background.jpg" alt="">
+</div>
 <div id="app_container">
 	<div id="app_container_middle">
 		<div id="app" class="border"></div>
@@ -18,8 +21,10 @@
 </div>
 <script>
 	var p_name="{{p_name}}";
+	var e_name="{{e_name}}";
 	var ready="{{ready}}";
 	var game_id="{{game_id}}";
+	var game_data="{{game_data}}"
 </script>
 <script src="{{url_for('static', filename='./js/bundle.js')}}"></script>
 
