--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -35,6 +35,29 @@
 				</span>
 		    </div>
 	    </form>
+	</div>
+	<div class="col-xs-1">
+		
+	</div>
+</div>
+<div id="indexMain2" class="container-fluid">
+	<div class="col-xs-1">
+		
+	</div>
+	<div class="col-xs-10 text">
+		<p>
+		Directions:<br/>
+		<br/>
+		Step 1: Enter a username and press start game!<br/>
+		<br/>
+		Step 2: Send the resulting URL to a friend! The URL will look similar to this:<br/>
+		<div class="indent">http://space-bomber.herokuapp.com/game/odgg3utyrz7mbfwjsromz1pa8<br/>
+		<br/>
+		Your opponent will be asked to enter username after clicking on the link. After which your opponent will appear in your game session and their username will be displayed in the "Enemy" slot on the right-hand column.<br/>
+		</div>
+		<br/>
+		Step 3: You as the initiating player will then be able to make the first move!
+		</p>
 	<div class="col-xs-1">
 		
 	</div>
